# ccserver

./: .env.example  .gitignore  Procfile  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  sse.py
app/models/: benchmark.py  metrics.py  openai.py  request.py  response.py
app/routes/: analytics.py  benchmark.py  chat_completions.py  messages.py
app/services/: claude_cli.py  converter.py
app/static/: dashboard.css  dashboard.html  dashboard.js
deploy/: Caddyfile  ccserver.service  setup.sh
docs/plans/: main.md
docs/plans/frontend/: main.md
docs/plans/phase-0-fix-streaming/: plan.md
docs/plans/phase-1-data-capture/: plan.md
docs/plans/phase-2-query-endpoints/: plan.md
docs/plans/phase-3-benchmark/: plan.md
tests/: test_analytics.py  test_api.py  test_benchmark.py  test_chat_completions.py  test_converter.py  test_database.py  test_metrics.py
